# ai4bmr-datasets

./: .gitignore  GEMINI.md  README.md  TNBC-reproduce-figure.py  arxiv.tex  codemeta.json  paper-arxiv.md  paper.bib  paper.md  pyproject.toml  requirements.txt  scratch.py  setup.cfg
.github/: pull_request_template.md
.github/workflows/: deploy-docs.yml  draft-pdf.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  overview.rst
docs/source/datasets/: BEAT.rst  Cords2024.rst  Danenberg.rst  Jackson2020.rst  Keren2018.rst  PCa.rst
issues/: issue-25.py  run-conda.sh  run-venv.sh
preprocessing/Cords2024/: cell_types.R
scratch/: NSCLC-load.py  extract-NSCLC-images.sbatch  scratch.py
scripts/: checksums.md  collect-dataset-stats.py  compile-pdf.sh  compute-checksums-for-all-datasets.py
scripts/BEAT/: compute-beat-embeddings.py  compute_patch_qc.py  create_symlink_folder.py  embeddings_clinical.py  embeddings_trident.py  process_embeddings_descriptive.py  run-trident.sh
scripts/Cords2024/: 178_B_heatmap.py
scripts/Keren2018/: cell-masks-differences.py  figure_2e.py  viz-cell-masks-differences.py  viz-raw-segmentation-masks.py
slurm/scripts/: compute-beat-embeddings.py  compute-beat-embeddings.sh  run_single_script.sh
src/ai4bmr_datasets/: __init__.py
src/ai4bmr_datasets/data/: splits.py
src/ai4bmr_datasets/data_models/: Dataset.py  Image.py  ImageCrop.py
src/ai4bmr_datasets/datamodels/: Image.py
src/ai4bmr_datasets/datasets/: BEAT.py  BLCa.py  BaseDataset.py  BaseIMCDataset.py  CIFAR10.py  ChEMBL.py  Cords2023.py  Cords2024.py  CropCollectionView.py  Danenberg.py  Danenberg2022.py  Dummy.py  DummyImages.py  DummyPoints.py  DummyTabular.py  IMC.py  ImageNet2012.py  Jackson2020.py  Jackson2023.py  Keren2018.py  Meyer2025.py  NSCLC.py  NSCLC_Cords.py  NSCLC_preprocessing.py  NSCLCv2.py  PCA.py  PCa.py  SegmentedImages.py  SegmentedImagesCrops.py  Sorin2023.py  TNBC.py  __init__.py  read_sce.R
src/ai4bmr_datasets/datasets/notebooks_NSCLC/: NSCLC.ipynb  SampleIDs_PatientIDs.txt  check_files.ipynb  convert_mcd_tiff.ipynb  img_MCD_tiff_conversion.ipynb  imgs_ID.txt  masks_IDs.txt
src/ai4bmr_datasets/utils/: crop.py  download.py  intensity.py  io.py  tidy.py
src/ai4bmr_datasets/utils/data_prep/: anndata_interface.py  data.py
src/ai4bmr_datasets/utils/graph_builder/: ContactGraphBuilder.py  KNNGraphBuilder.py  RadiusGraphBuilder.py  __init__.py  build_graph.py
src/ai4bmr_datasets/utils/imc/: features.py  normalize.py
src/ai4bmr_datasets/utils/plotting/: patch_vis.py
src/ai4bmr_datasets/utils/qc/: patch_qc.py
src/ai4bmr_datasets/utils/wsi/: coords.py  feats.py  segment.py
tests/: test_datasets.py  test_write.py  tma_anno.csv
tests/datasets/: test_BEAT.py  test_BLCa.py  test_CacheDownload.py  test_ChEMBL.py  test_Cords2024.py  test_Danenberg2022.py  test_ImageNet2012.py  test_Jackson2020.py  test_Jackson2023.py  test_Keren2018.py  test_PCa.py  test_TNBC.py  test_additional_fields.py  test_base_dir.py  test_class_defined_paths.py  test_create_annotated.py  test_data_types.py  test_default_paths.py  test_prepare_and_setup.py  test_user_defined_paths.py
tests/utils/: test_download.py
workflows/BEAT/: Snakefile  nohup.out  sample_ids.txt
workflows/BEAT/envs/: omics.yaml
workflows/BEAT/profiles/slurm/: config.yaml
