[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4bmr-datasets"
description = "Datasets used in the AI for Biomedical Research group"
authors = [
    { name = "Adriano Martinelli", email = "adriano.martinelli@chuv.ch" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "torch",
    "numpy",
    "openpyxl",
    "pandas",
    "tifffile",
    "scikit-image",
    "matplotlib",
    "pyarrow",
    "fastparquet",
    "geopandas",
    "loguru",
    "requests",
    "ai4bmr-core @ git+https://github.com/AI4SCR/ai4bmr-core.git"
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/AI4SCR/ai4scr-datasets"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "mypy",
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "setuptools_scm[toml]",
    "tabulate",
]

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_to_top = []

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "src/ai4bmr_datasets/_version.py"  # Example path where version info could be written

