[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
include_package_data = False
exclude =
# the following exclusion is to prevent shipping of tests.
# if you do include them, add pytest to the required packages.
    *tests*
# non-endpoint scripts are not supported in pyproject.toml
# scripts =
#     bin/brief_salutation
#     bin/a_shell_script

[options.package_data]
graph_cl = py.typed


# flake8 currently does not support pyproject.toml
# see https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 120
ignore = E203, E501, W503
